<resources>
    <string name="app_name">便携式电缆智能检测系统</string>

    <string name="cancel">取消</string>
    <string name="login_in">登录</string>
    <string name="account">账号</string>
    <string name="pwd">密码</string>
    <string name="forget_pwd">忘记密码</string>

    <string name="file">文件</string>
    open_picture
    <string name="open_picture">打开图片</string>
    <string name="save_picture">保存结果</string>
    <string name="exit">退出</string>

    <string name="mode">模式</string>
    <string name="scan">拍照模式</string>
    <string name="edit">测量模式</string>

    <string name="report">报表生成</string>
    <string name="report_gene">报表生成</string>

    <string name="setting">设置</string>
    <string name="path">路径设置</string>


    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="prompt_email">账号</string>
    <string name="prompt_password">密码</string>
</resources>
