<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/prompt_email"

            android:maxLines="1"
            android:singleLine="true" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/prompt_password"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <!--android:background="@drawable/topbg2"-->
            <Button
                android:id="@+id/cancel"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/cancel"
                android:textColor="#ffffff" />
            <!--android:background="@drawable/normal_btn"-->
            <TextView
                android:id="@+id/tv_friend_title"
                android:layout_width="wrap_content"
                android:layout_height="50dip"
                android:layout_weight="1"
                android:gravity="center"
                android:text="AppName"
                android:textColor="#ffffff"
                android:textSize="20dip" />

            <Button
                android:id="@+id/login_in"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/login_in"
                android:textColor="#ffffff" />

        </LinearLayout>

    </LinearLayout>
</merge>